# hotactor_framework

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: __init__.py  demo.py  teacher_handlers.py  teacher_state.py
examples/qwen_chat/: __init__.py  client.py  server.py
examples/vllm_chat/: __init__.py  client.py  server.py
hotactor/: __init__.py  client.py  launcher.py  registry.py  runtime.py  serving.py  state.py
tests/: test_client.py
